mais algumas modificações pra ficar top

--- a/Udemy/frontend/public/index.html
+++ b/Udemy/frontend/public/index.html
@@ -7,6 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  Olár lindão
+  <div id="app">
+    <h1>Notícias</h1>
+
+    <router-view></router-view>
+  </div>
+  <script src="./dist/bundle.js"></script>
 </body>
 </html>
